# ir_project

./: CMakeLists.txt  README.md  nrf52840dk_nrf52840.overlay  prj.conf
configs/irdb_samples/: Samsung_TV_7_7.csv
doc/: timer32_usgs.md  测试验证指南.md
include/: ir_hal.h  ir_learning.h  ir_service.h  irdb_loader.h  irdb_protocol.h
src/: ir_hal.c  ir_learning.c  ir_learning_app.c  ir_service.c  irdb_loader.c  irdb_protocol.c  main.c
